# memegen

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  PRD.md  Procfile  README.md  TODO.md  alembic.ini  main.py  pyproject.toml  pytest.ini
.cursor/rules/: agent.mdc  coding_style.mdc  commit_msg.mdc  common.mdc  deprecated.mdc  github_actions.mdc  langfuse.mdc  llm.mdc  logging.mdc  long_run_code.mdc  makefile-commands.md  package-management.md  railway.mdc  routes.mdc  tests.mdc  typing.mdc  uv.mdc
.githooks/: post-commit
.github/workflows/: auto-delete-branch.yml  linter_require_ruff.yaml  test_target_tests.yaml  vulture_dead_code.yaml
alembic/: env.py  rls_support.py
alembic/versions/: 062573113f68_add_api_keys_table.py  2615f2e2da9e_add_profile_and_organization.py  33ae457b2ddf_add_referral_columns.py  3f1f1bf8b240_simplify_subscription_for_graduated_.py  54eeece17890_initialization_of_alembic_by_eito.py  8b9c2e1f4c1c_add_agent_conversations_history.py  f148a5bbb1f2_add_user_subscriptions_table_and_.py
common/: __init__.py  config_models.py  db_uri_resolver.py  global_config.py  global_config.yaml  production_config.yaml  subscription_config.py  subscription_config.yaml
data/: templates.json
docs/: branch_comparison.md  configuration.md  decorating_markdown.md  frontend_chat_side_panel.md  updating_template.md
docs/commands/: tree.md
docs/integrations/: workos.md
docs/prompts/: good_mermaid.md  pyper.md  shell_script.md
docs/readme_examples/: open_source.md
init/: Makefile  generate_banner.py
media/meme-templates/: README.md
scripts/: railway.sh  test_langfuse_tracing.py  validate_models.py
src/: server.py
src/.cursor/rules/: db_transaction.mdc
src/api/: limits.py
src/api/auth/: api_key_auth.py  unified_auth.py  utils.py  workos_auth.py
src/api/routes/: __init__.py  ping.py  referrals.py
src/api/services/: referral_service.py
src/db/: collate_models.py  database.py
src/db/models/: __init__.py
src/db/utils/: __init__.py  db_transaction.py  dependency_validator.py  foreign_key_manager.py  migration_validator.py  model_discovery.py  users.py
src/stripe/dev/: create_webhook.py  env_config.yaml
src/stripe/prod/: create_webhook.py  env_config.yaml
src/utils/: context.py  logging_config.py
src/utils/integration/: __init__.py  telegram.py
tests/: README.md  conftest.py  test_api_key_auth.py  test_daily_limits.py  test_db_uri_resolver.py  test_template.py  test_workos_auth.py
tests/e2e/: e2e_test_base.py  test_ping.py
tests/e2e/agent/: __init__.py  test_agent.py  test_agent_limits.py
tests/e2e/payments/: test_stripe.py
tests/healthcheck/: test_common.py  test_env_var_loading.py  test_pydantic_type_coercion.py  test_pydantic_type_coersion.py
tests/unit/: test_agent_history_context.py  test_tool_streaming_callback.py
utils/llm/: dspy_inference.py  dspy_langfuse.py  tool_display.py  tool_streaming_callback.py
(+30 files in other folders)
