[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Miyamura80", email = "eitomiyamura@gmail.com" }
]
dependencies = [
    "black>=24.8.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "human-id>=0.2.0",
    "pytest>=8.3.3",
    "termcolor>=2.4.0",
    "loguru>=0.7.3",
    "vulture>=2.14",
    "dspy>=2.6.24",
    "langfuse>=2.60.5",
    "litellm>=1.70.0",
    "tenacity>=9.1.2",
    "pillow>=11.2.1",
    "google-genai>=1.15.0",
    "ty>=0.0.1a9",
    "pytest-env>=1.1.5",
    "pydantic-settings>=2.12.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

[tool.vulture]
exclude = [
    ".venv/",
    "tests/**/test_*.py",
    "tests/test_template.py",
    "utils/llm/",
    "common/",
    "src/utils/logging_config.py",
    "src/utils/context.py",
    "tests/conftest.py"
]
